# agent_eda

./: .gitignore  SKILLS_INTEGRATION_PLAN.md
backend/: .env.example  .gitignore  README.md  data_catalog.example.yaml  docker-compose.yml  frontmatter.py  history.py  main.py  pyproject.toml  server.py
backend/agents/: __init__.py  loader.py  mcp_client.py  orchestrator.py
backend/agents/definitions/: bq_explorer.md  main_agent.md  viz_analyst.md
backend/config/: __init__.py  catalog.py  settings.py
backend/persistence/: __init__.py  checkpointer.py  crypto.py
backend/scripts/: init_checkpoint_db.py  prune_checkpoints.py
backend/skills/: __init__.py  loader.py
backend/skills/build-dashboard/: SKILL.md
backend/skills/data-quality-audit/: SKILL.md
backend/skills/data-visualization/: SKILL.md
backend/skills/explore-data/: SKILL.md
backend/skills/key-comparison/: SKILL.md
backend/skills/statistical-analysis/: SKILL.md
backend/telemetry/: __init__.py  core.py  governance.py
backend/tests/: conftest.py  test_agent_loader.py  test_bigquery_tools.py  test_catalog.py  test_encrypted_serializer.py  test_sanitize_client_history.py  test_script_tools.py  test_settings.py
backend/tools/: __init__.py  analysis_tools.py  bigquery_tools.py  drive_tools.py  report_tools.py  script_tools.py  skill_tools.py  viz_tools.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: rest.ts  wsClient.ts
frontend/src/components/chat/: ArtifactChip.tsx  ChatColumn.tsx  ChatEmptyState.tsx  Composer.tsx  DropZone.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  MessageList.tsx  MessageSkeleton.tsx  StreamingCursor.tsx  SuggestedPrompts.tsx
frontend/src/components/common/: EmptyState.tsx  ErrorBoundary.tsx  IconButton.tsx  RelativeTime.tsx
frontend/src/components/history/: ConversationGroup.tsx  ConversationItem.tsx  HistoryEmptyState.tsx  HistorySidebar.tsx  UserFooter.tsx
frontend/src/components/layout/: AppShell.tsx  ConnectionBadge.tsx  TopBar.tsx
frontend/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  scroll-area.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
frontend/src/components/workspace/: WorkspaceEmptyState.tsx  WorkspacePanel.tsx  WorkspaceTabs.tsx
frontend/src/components/workspace/artifacts/: ArtifactCard.tsx  ArtifactList.tsx  ArtifactSkeleton.tsx  ArtifactViewer.tsx  ChartImageRenderer.tsx  ChartInteractiveRenderer.tsx  FileRenderer.tsx  LinkRenderer.tsx  TableRenderer.tsx
frontend/src/components/workspace/reports/: ReportCard.tsx  ReportList.tsx  ReportSkeleton.tsx  ReportViewer.tsx
frontend/src/data/: mockData.ts
frontend/src/hooks/: useArtifactPolling.ts  useChatStream.ts  useMediaQuery.ts
frontend/src/lib/: artifactDetection.ts  config.ts  persistence.ts  time.ts
frontend/src/store/: useAppStore.ts
frontend/src/types/: index.ts
